[package]
name = "redis_cluster_async"
version = "0.3.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
keywords = ["redis", "cluster", "database", "async"]
description = "Async redis cluster driver for Rust."
homepage = "https://github.com/Marwes/redis-cluster-async"
repository = "https://github.com/Marwes/redis-cluster-async"
license = "MIT"
readme = "README.md"

edition = "2018"

[dependencies]
crc16 = "*"
futures = "*"
rand = "*"
tokio = { version = "*", features = ["time"] }
log = "*"

[dependencies.redis]
git = "https://github.com/Terkwood/redis-rs.git"
default-features = false
features = ["cluster", "streams", "geospatial", "tokio-comp", "tokio-rt-core", "script"]

[dev-dependencies]
lazy_static = "*"
tokio = { version = "0.2", features = ["macros", "full"] }
env_logger = "*"
proptest = "*"
